Fix alignment of recent conversations.

--- a/ui/apps/io.ox/chat/style.less
+++ b/ui/apps/io.ox/chat/style.less
@@ -865,6 +865,10 @@
         .scrollpane {
             padding: 16px;
         }
+
+        .chats-container {
+            min-height: 32px;
+        }
     }
 
     .channel, .history-list {
